@@ -1,6 +1,6 @@
 package NCO_rgr;
 
-# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.138 2012-11-02 21:39:24 pvicente Exp $
+# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.139 2012-11-05 19:48:06 pvicente Exp $
 
 # Purpose: All REGRESSION tests for NCO operators
 # BENCHMARKS are coded in "NCO_benchmarks.pm"
@@ -810,6 +810,15 @@ sub tst_rgr {
     $tst_cmd[3]="SS_OK";
     NCO_bm::tst_run(\@tst_cmd);
     $#tst_cmd=0;  # Reset array			
+	
+#NCO 4.2.3: groups: Extract "bounds" variables (extract /g8/ilev)
+    $tst_cmd[0]="ncks -O -g g8 -v lev $in_pth_arg in_grp.nc %tmp_fl_00%";
+    $tst_cmd[1]="ncks -O -H  -s '%g' %tmp_fl_00% ";
+    $dsc_sng="(Groups required) Extract 'bounds' variables";
+    $tst_cmd[2]="03003007507501013.25";
+    $tst_cmd[3]="SS_OK";
+    NCO_bm::tst_run(\@tst_cmd);
+    $#tst_cmd=0;  # Reset array				
 
 #####################
 #### ncpdq tests #### -OK !
